# DineDesk

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PROJECT_STRUCTURE.md  README.md  app.py  app_simple.py  auth.py  config_supabase.py  models.py  pyproject.toml  requirements-production.txt  requirements.txt  run.py  setup_supabase_direct.py  supabase_schema.sql  users.json
attached_assets/: Pasted--DineDesk-AI-Restaurant-Assistant-Development-Prompt-Project-Overview-Build-a-sophisticated-r-1749466376556_1749466376557.txt  Pasted--DineDesk-Agent-System-Prompt-Backend-Requirements-System-Overview-DineDesk-is-an-AI-agent-fo-1749530958680_1749530958681.txt  Pasted--DineDesk-Application-Login-Signup-Implementation-Request-Project-Context-I-have-an-existin-1749631015788_1749631015789.txt  Pasted-DineDesk-Agent-System-Prompt-Backend-Requirements-System-Overview-DineDesk-is-an-AI-agent-for-rest-1749530975688_1749530975688.txt
chat_history/: abc_at_gmail_dot_com_chats.json
static/css/: custom.css  style.css
static/js/: chat.js  chat_history.js  chat_simple.js  main.js  main_simple.js  voice.js  voice_assistant.js  voice_simple.js
templates/: base.html  index.html  index_simple.html  voice_assistant.html
templates/auth/: login.html  signup.html
utils/: ai_chat_handler.py  chat_handler.py  chat_storage.py  database_restaurant_api.py  database_setup.py  database_setup_simple.py  restaurant_api.py  simple_chat_storage.py  supabase_migration.py  supabase_setup.py  supabase_tables.py
